# eurorack-pmod-litex

./: .gitignore  .gitmodules  README.md  cmds.sh  cmds_smp.sh  colorlight_smp_norvc_ood.sh  dsp-test.py  ecpix5.sh  example-colorlight-i5.py  example-ecpix-5.py  example-sipeed-tang-primer-20k.py  lxbuildenv.py  minimal-i5.py  minimal.sh  nax.sh  nominal.sh  nope.sh  run_sim.sh  rust-fw.fbi  sim.py  spi_dma.py
.github/workflows/: main.yml
bootloader/: .gitignore  Makefile  crt0.S  flash.c  linker.ld  main.c  usb_descriptors.c
eurorack_pmod_migen/: blocks.py  core.py
examples/: colorlight_i5.py
firmware/: build.sh  cmd.sh
firmware/libvult/: .gitignore  Makefile  mklib.sh  transpile.sh
firmware/libvult/examples/: dsp.vult
firmware/libvult/runtime/: vultin.cpp  vultin.h
firmware/litex-fw/: Cargo.toml  build.rs
firmware/litex-fw/.cargo/: config
firmware/litex-fw/src/: draw.rs  dsp.rs  gw.rs  lib.rs  libvult.rs  log.rs  main.rs  opt.rs  plic.rs  voice.rs
firmware/oled-stub/: Cargo.toml
firmware/oled-stub/src/: lib.rs
firmware/polyboot/: Cargo.toml
firmware/polyboot/src/: main.rs
firmware/polyvec/: Cargo.toml  build.rs
firmware/polyvec-hal/: Cargo.toml
firmware/polyvec-hal/src/: gw.rs  lib.rs  log.rs
firmware/polyvec-lib/: Cargo.toml
firmware/polyvec-lib/src/: draw.rs  fluid.rs  lib.rs  opt.rs  voice.rs
firmware/polyvec/src/: draw.rs  gw.rs  log.rs  main.rs  opt.rs
rtl/: dma_router.py  dsp.py  eptri.py  eurorack_pmod_wrapper.py  pca9635_master.py  pca9635_master.sv
usbrtl/: eptri.py
