[package]
name = "litex-fw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "*"
riscv-rt = "*"
litex-hal = { path = "../deps/rust-litex-hal", features = ["gpio"] }
litex-pac = { path = "../litex-pac", features = ["rt"] }
ssd1322 = { path = "../ssd1322", features = [] }
embedded-midi = { path = "../deps/embedded-midi" }
micromath = "2.0.0"
midi-types = "0.1.7"
paste = "1.0.14"
embedded-graphics = "0.8.1"
heapless = { version = "0.7.16", features = ["ufmt-impl"] }
ufmt = "0.2.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
vexriscv = "0.0.3"
aligned-array = "1.0.1"
spin = "0.9.8"

[profile.release]
lto = true
opt-level = 3
