[package]
name = "litex-fw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.68.1"

[dependencies]
riscv = { git = "https://github.com/rust-embedded/riscv", branch="master", features = ["plic"] }
riscv-rt = "*"
panic-halt = "*"
litex-hal = { path = "../deps/rust-litex-hal" }
litex-pac = { path = "../deps/generated-litex-pac", features = ["rt"] }
litex-sys = { path = "../deps/litex-sys" }
micromath = "2.0.0"
heapless = { version = "0.7.16", default-features = false, features = ["ufmt-impl", "atomic-polyfill"] }
ufmt = "0.2.0"
aligned-array = "1.0.1"
fixed = "1.24.0"

[profile.release]
lto = true
opt-level = 3
