[package]
name = "polyvec-hal"
version = "0.1.0"
edition = "2021"

[lib]
name = "polyvec_hal"
path = "src/lib.rs"

[dependencies]
micromath = "2.0.0"
heapless = { version = "0.7.16", features = ["ufmt-impl"] }
ufmt = "0.2.0"
litex-hal = { path = "../deps/rust-litex-hal", features = ["gpio"] }
litex-pac = { path = "../deps/generated-litex-pac", features = ["rt"] }
paste = "1.0.14"
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = { path = "../deps/riscv-rt", features = ["single-hart"] }
vexriscv = "0.0.3"

[profile.release]
lto = true
opt-level = 3
