[package]
name = "polyvec-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "polyvec_lib"
path = "src/lib.rs"

[dependencies]
embedded-graphics = "0.8.1"
midi-types = "0.1.7"
micromath = "2.0.0"
heapless = { version = "0.7.16", features = ["ufmt-impl"] }
ufmt = "0.2.0"
strum_macros = "0.25.3"
strum = {version = "0.25.0", features = ["derive"], default-features=false}
fixed = "1.25.1"

[dev-dependencies]
critical-section = { version = "1.1.2", features = ["std"] }
image = "0.24.7"

[profile.release]
lto = true
opt-level = 3
