[package]
name = "polyvec"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "polyvec_main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyvec-lib = { path = "../polyvec-lib" }
polyvec-hal = { path = "../polyvec-hal" }
litex-sys = { path = "../deps/litex-sys" }
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = { path = "../deps/riscv-rt", features = ["single-hart"] }
litex-hal = { path = "../deps/rust-litex-hal", features = ["gpio"] }
litex-pac = { path = "../deps/generated-litex-pac", features = ["rt"] }
ssd1322 = { path = "../deps/ssd1322", features = [] }
embedded-midi = { path = "../deps/embedded-midi" }
micromath = "2.0.0"
midi-types = "0.1.7"
paste = "1.0.14"
embedded-graphics = "0.8.1"
heapless = { version = "0.7.16", features = ["ufmt-impl"] }
ufmt = "0.2.0"
vexriscv = "0.0.3"
aligned-array = "1.0.1"
irq = "0.2.3"
litex-interrupt = { path = "../deps/litex-interrupt" }
critical-section = "1.1.2"
strum_macros = "0.25.3"
strum = {version = "0.25.0", features = ["derive"], default-features=false}
fixed = "1.24.0"

[profile.release]
lto = true
opt-level = 3
